bug fixed : Nav bar link background color width is too high while hover

--- a/css/style.css
+++ b/css/style.css
@@ -88,13 +88,13 @@ header{
     font-size: 1rem;
     font-weight: 500;
     color: var(--text-color);
-    padding: 1.5rem 1rem;
+    padding: 0.5rem 1rem;
 }
 
 .navbar a:hover, .navbar .home-active{
     background-color: var(--green-color);
     color: var(--bg-color);
-    border-radius: 1rem;
+    border-radius: 1rem;            /* Bug Fixed : Nav bar link background color width is too high while hover */
     transition: background 0.5s;
 }
 
